# Haskell

0318/: Factorial.hs  explicitFunc.hs
0415/: recFunc.hs
0506/: doNameBinding.hs  forM.hs  forever.hs  fullName.hs  hello.hs  imputName.hs  inputCnt.hs  print.hs  putChar.hs  putCharStr.hs  putStr.hs  returnBinding.hs  returnEx.hs  reverseWord.hs  sequence.hs  sequence0.hs  trian.hi  trian.hs  when.hs
0513/: args.hi  args.hs  deleteItem.hi  deleteItem.hs  happycaps.txt
0520/: getStdGen2.hs  getStdGen3.hi  getStdGen3.hs  guess.hs  nameDo.hs  nameLambda.hs  nameReturn.hs  nameReturn2.hs  randomList.hi  randomList.hs  revsLine1.hs  revsLine2.hi  revsLine2.hs  revsLine3.hi  revsLine3.hs  txtFileCopy.hi  txtFileCopy.hs
20210408/: function.hs
20210429/: Geometry.hs  firstTo.hs
hellohaskell/: ChangeLog.md  README.md  hellohaskell.cabal  package.yaml
my-new-project/: README.md  my-new-project.cabal  stack.yaml
my-new-project/src/: Main.hs
