name:                my-new-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-new-project#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable my-new-project
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: base >= 4.13 && < 5
               , gloss
               , worldturtle >= 0.2 && < 0.3
